// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionAmount should render currency amount 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render in lg 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render in md 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render in sm 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Amount
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="css-1vb1527"
            color="success"
          >
            <div
              class="flex space-x-1 items-stretch"
            >
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                + 1 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render in xl 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render in xs 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="items-top flex w-full justify-between space-x-4 md:items-center"
      data-testid="TransactionDetail--mobile"
    >
      <div
        class="text-md md:theme-text group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
      >
        Amount
      </div>
      <div
        class="flex min-w-0 grow items-center justify-end space-x-4"
      >
        <div
          class="md:theme-text flex w-full justify-end text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          <div
            class="css-1vb1527"
            color="success"
          >
            <div
              class="flex space-x-1 items-stretch"
            >
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                + 1 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 1`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 2`] = `
<div>
  <div
    class="no-ligatures css-19rivvh"
    data-testid="TransactionAmount"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Total Amount
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="css-1vb1527"
          color="success"
        >
          <div
            class="flex space-x-1 items-stretch"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              + 1 DARK
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
